assets/css/style.css
/* fonts import Google fonts /*
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200..700&display=swap');

lato google font 
/* asterisk is the wildcard selector which ensures that the website does not put the default layout in*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* general styles  */

/* generic project style */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #3a3a3a;
    font-family: "lato", sans-serif;
}

/* header */
header {
    background-color: #ffffff;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #3a3a3a;
}
header a {
    text-decoration: none;
    color: inherit;
}

h1 {
    font-family: "oswald", sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #252525;
}

#menu {
    font-size: 100%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu > li {
    margin-bottom: 1em;
}

.active {
    border-bottom: 1px solid;
    color: 3a3a3a;
}

/* Navbar style with dropdown toggle */
nav {
    position: absolute;
    background-color: #ffffff;
    width: 100%;
    left: 0;
    box-shadow: 0 2px 2px #3a3a3a;
    display: none;
}

/* main content */
main {
    background-color: lightblue;
    /* make main element take up any surplus space to push footer down*/
    flex: 1 0 auto;
}

/* footer */
footer {
    background-color: orange;
}

